# paper-tldr

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml
scripts/: eda.py  plot_training_curves.py  prepare_data.py  run_baselines.py  run_train.py  smoke_test.py  summarize_results.py
src/: baselines.py  data.py  eval.py  train.py
tests/: test_baselines.py  test_data.py  test_eval.py
