[project]
name = "paper-tldr"
version = "0.1.0"
description = "QLoRA fine-tune of Llama 3.2 3B for plain-language summarization of scientific abstracts"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
# Without this, ruff/isort classifies a few project-domain third-party packages
# as "first-party" and demands a separating blank line in the import block.
known-third-party = ["wandb", "evaluate", "datasets", "peft", "transformers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
